[gd_scene load_steps=8 format=3 uid="uid://cthsrqj7moamg"]

[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/VT323-Regular.ttf" id="1_bhec8"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_plqj1"]
[ext_resource type="AudioStream" uid="uid://bfycn4l5cotsc" path="res://Sounds/lose_sound.mp3" id="3_epis3"]
[ext_resource type="AudioStream" uid="uid://c3lig6yn28gfu" path="res://Sounds/Win_sound.mp3" id="4_8ac1y"]
[ext_resource type="AudioStream" uid="uid://b5kbwbmnd0h2j" path="res://Sounds/Next_level_two.mp3" id="4_abhbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnogu"]
bg_color = Color(0, 0.721569, 0.298039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et6fs"]
bg_color = Color(0.584314, 0, 0.0941176, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_plqj1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_bhec8")
theme_override_font_sizes/font_size = 32
text = "Lives 3"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lnogu")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "You Have Won The Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_et6fs")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE LOST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART GAME"

[node name="LostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_epis3")

[node name="LevelPassSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_abhbt")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8ac1y")

[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
